--- a/src/App.css
+++ b/src/App.css
@@ -58,4 +58,13 @@ tr,th{
   }
 }
 
+.author{
+  background-color: #282c34;
+  text-align: right;
+  font-size: 16px;
+}
 
+
+.author a{
+  color:white;
+}
